--- a/YadnexTank.PhantomAmmo.AspNetCore/YadnexTank.PhantomAmmo.AspNetCore.csproj
+++ b/YadnexTank.PhantomAmmo.AspNetCore/YadnexTank.PhantomAmmo.AspNetCore.csproj
@@ -10,9 +10,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-      <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
       <PackageReference Include="YandexTank.PhantomAmmo" Version="0.2.1" />
     </ItemGroup>
 
