support different files, update middleware

--- a/AspNetCore2App/appsettings.Development.json
+++ b/AspNetCore2App/appsettings.Development.json
@@ -2,7 +2,9 @@
 
   "PhantomAmmoCollector": {
     "Enabled": true,
-    "PathToFile": "ammo.txt"
+    "AllRequestsFile": "ammoAll.txt",
+    "GoodRequestsFile": "ammoGood.txt",
+    "BadRequestsFile": "ammoBad.txt"
   },
   
   "Logging": {
