--- a/AspNetCore3App/appsettings.Development.json
+++ b/AspNetCore3App/appsettings.Development.json
@@ -1,7 +1,9 @@
 {
   "PhantomAmmoCollector": {
     "Enabled": true,
-    "PathToFile": "ammo.txt"
+    "AllRequestsFile": "ammoAll.txt",
+    "GoodRequestsFile": "ammoGood.txt",
+    "BadRequestsFile": "ammoBad.txt"
   },
   
   "Logging": {
