--- a/YandexTank.PhantomAmmo/YandexTank.PhantomAmmo.csproj
+++ b/YandexTank.PhantomAmmo/YandexTank.PhantomAmmo.csproj
@@ -4,9 +4,13 @@
         <TargetFramework>netstandard2.0</TargetFramework>
 
         <PackageId>YandexTank.PhantomAmmo</PackageId>
-        <Version>0.3.0</Version>
+        <Version>0.4.0</Version>
         <Authors>Kirill Amurskiy</Authors>
         <Company>Amursoft</Company>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Text.Encodings.Web" Version="4.5.0" />
+    </ItemGroup>
 
 </Project>
